# data-self-organisation

./: CMakeLists.txt  README.md  dual_output_1.txt  keep.txt  output.csv  output0.csv  prog.txt  prog2.txt  prog3.txt
output/: dual_output_2.txt  dual_output_3.txt  output0.csv  run.txt  run0.txt  run1.txt  run2.txt  run3.txt  run4.txt  run6.txt  run7.txt
outputs/test1/: output.csv
outputs/test2/: output0.csv  output1.csv
src/: CMakeLists.blob  CMakeLists.txt
src/include/: cell.h  collector.h  data.h  fifo.h  gate.h  generator.h  history.h  in.h  kdpoint.h  kdtree.h  npga.h  parameters.h  population.h  program.h  schema.h  schemas.h  score.h  semaphore.h  spea.h  vector.h
src/include/parallel/: device.hpp  front.hpp  program.hpp
src/include/threading/: semaphore.h  thread.h
src/source/: cell.cpp  collector.cpp  data.cpp  gate.cpp  generator.cpp  history.cpp  in.cpp  kdpoint.cpp  kdtree.cpp  main.cpp  npga.cpp  population.cpp  program.cpp  schema.cpp  schemas.cpp  score.cpp  semaphore.cpp  spea.cpp  thread.cpp
src/source/parallel/: device.cpp  front.cpp  program.cpp
src/source/threading/: semaphore.cpp  thread.cpp
test/: CMakeLists.blob  CMakeLists.txt  device.cpp  main.cpp  native.cpp  schemas.cpp
